refactor: 7/5 코드리뷰 반영 (repository 인터페이스 구현)